- build.xml now has web.dev.fast.auth bool property, allowing for deployment of web app that uses HTTP BASIC authentication instead of FORM authentication.  This allows for quicker UI development, as developer can have browser remember login credentials between webapp restarts, avoiding explicit login step. - build.xml specifies larger, max permgen space for debug web deployments, allowing more webapp restarts to occur before OutOfMem errors occur (a hacky, partial fix, but an improvement nonetheless) - hot-deploy-classes.sh is a quick & dirty script to update local web deployment with eclipse-compiled classes, and to reload webapp by touching its web.xml
git-svn-id: https://forge.abcd.harvard.edu/svn/screensaver/trunk@1228 80c535d0-b110-0410-b4de-9279f94142c3